@@ -1,3 +1,9 @@
+2001-04-22  Christoph Pfisterer  <cp@chrisp.de>
+
+	* PkgVersion.pm: Handle .zip files. Source files with an unknown
+	extension are copied to the unpacking directory. Check build
+	directory for existence.
+
 2001-04-20  Christoph Pfisterer  <cp@chrisp.de>
 
 	* PkgVersion.pm (phase_install): Remove dir files in the info
